cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("profilling-tools")

# Add source files
set(SOURCES
    test-timer.cpp
)

# Add executable
 add_executable(profilling-tools ${SOURCES} 
  "src/timer.cpp"
 )

 # Add include directories
target_include_directories(profilling-tools PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET profilling-tools PROPERTY CXX_STANDARD 20)
endif()